--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "express-session": "^1.18.1",
+    "jwt-decode": "^4.0.0",
+    "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1"
   },
   "scripts": {
     "dev": "concurrently \"nodemon server.js\" \"npm run client\"",
