--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^7.0.3",
