--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dev": "concurrently \"nodemon server.js\" \"npm run client\"",
     "client": "react-scripts start",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
